--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "bootstrap": "^5.3.3",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
@@ -19,6 +20,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.3",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.7",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
