--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@expo-google-fonts/poppins": "^0.2.3",
     "bootstrap": "^5.3.3",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
